# notebooks-collection-opendata

./: .gitignore  ATLAS_OpenData_01-cpp_Hyy_channel_analysis_example.ipynb  ATLAS_OpenData_01-python_Hyy_channel_analysis_example.ipynb  ATLAS_OpenData_01-simple_cpp_example_histogram.ipynb  ATLAS_OpenData_02-simple_python_example_histogram.ipynb  ATLAS_OpenData_03-cpp_invariant_mass_reconstruction_using_TLorentz_vectors.ipynb  ATLAS_OpenData_04-python_invariant_mass_reconstruction_using_TLorentz_vectors.ipynb  ATLAS_OpenData_05-ccp_CSV_to_ROOT_ploting_example.ipynb  ATLAS_OpenData_06-cpp_simple_cut_and_count_analysis_example.ipynb  ATLAS_OpenData_07-python_simple_two_samples_comparison.ipynb  ATLAS_OpenData_08-cpp_cut_and_count_analysis_example.ipynb  ATLAS_OpenData_analysis_example-cpp_Hyy_channel.ipynb  ATLAS_OpenData_analysis_example-python_Hyy_channel.ipynb  ATLAS_OpenData_full_HyyAnalysis_in5min-python.ipynb  Action items.txt  CODEOWNERS  Dockerfile  Dockerfile.conda  Dockerfile.delphes  Dockerfile.rivet  Hmumu.ipynb  README.md  WZ3L_FEB2025.ipynb  changed_notebooks.txt  environment.yml  pyproject.toml  reana.yaml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
13-TeV-examples/: ATLAS_OpenData_13-TeV__analysis_example-cpp_Hyy_channel.ipynb  ATLAS_OpenData_13-TeV_full_HyyAnalysis_5min-Python.ipynb  ATLAS_OpenData_13-TeV_simple_cpp_example_histogram.ipynb  ATLAS_OpenData_13-TeV_simple_python_example_histogram.ipynb  ATLAS_OpenData__13-TeV_analysis_example-python_Hyy_channel.ipynb
8-TeV-examples/: ATLAS_OpenData_8-TeV_ccp_CSV_to_ROOT_ploting_example.ipynb  ATLAS_OpenData_8-TeV_cpp_cut_and_count_analysis_example.ipynb  ATLAS_OpenData_8-TeV_cpp_invariant_mass_reconstruction_using_TLorentz_vectors.ipynb  ATLAS_OpenData_8-TeV_cpp_simple_cut_and_count_analysis_example.ipynb
binder/: environment.yml
for-research/: OpenEvgenPhenoTutorial.ipynb  OpenEvgenTutorial.ipynb  hepmc_fireworks.ipynb  physlite_tutorial.ipynb  physlite_tutorial_requirements.txt
tutorials/: ATLASOpenData_MLTutorial.ipynb  PyTorchDNN_HWW_vs_ttbar.ipynb
(+109 files in other folders)
