[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "13-TeV-examples",
  "8-TeV-examples",
  "LICENSE",
  "README.md",
  "for-research",
  "images"
]

[project]
name = "notebooks-collection-opendata"
version = "0.1.0"
description = "A collection of notebooks for demonstrating various uses and applications of ATLAS Open Data."
authors = [
    { name="ATLAS Collaboration", email="atlas-outreach-opendata-support@cern.ch" }
]
readme = "README.md"
license = "EUPL-1.1"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["ATLAS", "Open Data", "Utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",

    "Natural Language :: English",

    "License :: OSI Approved",
    "License :: OSI Approved :: European Union Public Licence 1.1 (EUPL 1.1)",

    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "Topic :: Documentation",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",

    "Typing :: Typed",
]
dependencies = [
  "root",
  "aiohttp>=3.9.5",
  "atlasopenmagic>=1.2.0",
  "awkward>=2.6.7",
  "awkward-pandas>=2023.8.0",
  "coffea~=0.7.0",
  "fsspec>=2025.7.0",
  "hist>=2.8.0",
  "ipykernel>=6.29.5",
  "jupyter>=1.0.0",
  "lmfit>=1.3.2",
  "matplotlib>=3.9.1",
  "metakernel>=0.30.2",
  "notebook<7",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "papermill>=2.6.0",
  "pip>=24.2",
  "scikit-learn>=1.5.1",
  "uproot>=5.3.10",
  "uproot3>=3.14.4",
  "fsspec-xrootd>=0.5.1",
  "jupyterlab_latex~=3.1.0",
  "vector>=1.4.1"
]

[project.urls]
Homepage = "https://opendata.atlas.cern/"
Repository = "https://github.com/atlas-outreach-data-tools/notebooks-collection-opendata"
Documentation = "https://opendata.atlas.cern/"
